<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        android:layout="@layout/preference_header_back" />
    <PreferenceCategory
        android:layout="@layout/preference_category_modern"
        android:title="@string/preference_category_experimental_settings">

        <androidx.preference.SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

        <!-- Force landscape orientation -->
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_landscape"
            android:title="@string/preference_force_landscape_title"
            android:summary="@string/preference_force_landscape_summary"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_modern"
        android:title="@string/preference_category_launcher_appearance">

        <!-- Set custom launcher background from gallery -->
        <Preference
            android:key="set_custom_launcher_bg"
            android:title="@string/preference_set_custom_bg_title"
            android:summary="@string/preference_set_custom_bg_summary"
            android:layout="@layout/preference_item_modern" />

        <!-- Remove custom launcher background -->
        <Preference
            android:key="remove_custom_launcher_bg"
            android:title="@string/preference_remove_custom_bg_title"
            android:summary="@string/preference_remove_custom_bg_summary"
            android:layout="@layout/preference_item_modern" />

        <!-- Colour theme presets + reset -->
        <Preference
            android:key="colour_theme_presets"
            android:title="@string/preference_colour_presets_title"
            android:summary="@string/preference_colour_presets_summary"
            android:layout="@layout/preference_item_modern" />

        <!-- Background gradient toggle -->
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enable_bg_gradient"
            android:title="@string/preference_bg_gradient_title"
            android:summary="@string/preference_bg_gradient_summary"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

    </PreferenceCategory>
</PreferenceScreen>
