<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        android:layout="@layout/preference_header_back" />

    <PreferenceCategory
        android:layout="@layout/preference_category_modern"
        android:title="@string/preference_category_video" >
        <Preference
            android:title="@string/mcl_setting_title_renderer_settings"
            android:summary="@string/mcl_setting_title_renderer_subtitle"
            android:icon="@drawable/ic_setting_engine"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceRendererSettingsFragment"
            android:layout="@layout/preference_item_modern"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_setting_hide_notch"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app:showSeekBarValue="true"
            app:selectable="false"
            app:min="@integer/resolution_seekbar_min"
            app:seekBarIncrement="@integer/resolution_seekbar_increment"
            android:icon="@drawable/ic_settings_video"
            />

        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vsync_in_zink"
            android:summary="@string/preference_vsync_in_zink_description"
            android:title="@string/preference_vsync_in_zink_title"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />
    </PreferenceCategory>
</PreferenceScreen>
