<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        android:layout="@layout/preference_header_back" />

    <PreferenceCategory
        android:layout="@layout/preference_category_modern"
        android:title="@string/preference_category_miscellaneous">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_setting_hash_verification"
            android:key="checkLibraries"
            android:summary="@string/mcl_setting_check_libraries_subtitle"
            android:title="@string/mcl_setting_check_libraries"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="arc_capes"
            android:summary="@string/arc_capes_desc"
            android:title="@string/arc_capes_title"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />
        <androidx.preference.ListPreference
            android:defaultValue="default"
            android:key="downloadSource"
            android:entries="@array/download_source_names"
            android:entryValues="@array/download_source_values"
            android:title="@string/preference_download_source_title"
            android:summary="@string/preference_download_source_description"
            app:useSimpleSummaryProvider="true"
            android:layout="@layout/preference_item_modern" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

    </PreferenceCategory>

</PreferenceScreen>
