<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        android:layout="@layout/preference_header_back" />

    <PreferenceCategory
        android:layout="@layout/preference_category_modern"
        android:title="@string/preference_category_java_tweaks">
        <Preference
            android:key="install_jre"
            android:persistent="false"
            android:summary="@string/multirt_subtitle"
            android:title="@string/multirt_title"
            android:layout="@layout/preference_item_modern" />

        <androidx.preference.EditTextPreference
            android:dialogTitle="@string/mcl_setting_title_javaargs"

            android:key="javaArgs"
            android:singleLine="true"
            android:summary="@string/mcl_setting_subtitle_javaargs"
            android:title="@string/mcl_setting_title_javaargs"
            android:layout="@layout/preference_item_modern" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="allocation"

            android:summary="@string/mcl_memory_allocation_subtitle"
            android:title="@string/mcl_memory_allocation"
            app:showSeekBarValue="true"
            app:min="@integer/memory_seekbar_min"
            app:seekBarIncrement="@integer/memory_seekbar_increment"
            app:selectable="false"
            android:icon="@drawable/ic_settings_java"
            android:layout="@layout/preference_seekbar_modern"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_autojre_select"
            android:title="Disable automatic JRE selection"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="java_sandbox"
            android:summary="@string/mcl_setting_java_sandbox_subtitle"
            android:title="@string/mcl_setting_java_sandbox"
            android:layout="@layout/preference_item_modern"
            android:widgetLayout="@layout/preference_switch_modern" />

    </PreferenceCategory>


</PreferenceScreen>
